--- a/styles/style.css
+++ b/styles/style.css
@@ -247,6 +247,7 @@ html {
 
 body {
   font-size: 3rem;
+  overflow-x: hidden;
 }
 
 ul {
